Fixed the merge
o Removed commented code
o Show more than 100 warnings when coimpiling the project
Fixed some merge issue

Fixed some merge issue

Fixed some merge issue

o Added a conversion for byte[] values
o Using a simpler syntax to convert a List to an Array
o Converted some test to get the LSC configuration in the test instead
of using the lsc.xml file
o Removed some dead code
Fixed some merge issue

o Improved the List -> Array conversion
o Properly process the list of requested attributes when '*' is used
Fixed the failing tests